added difference between a priori and a posteriori vesicle release probability. Now displayed probability is a priori with respect to AP emission.

--- a/main.ipynb
+++ b/main.ipynb
@@ -116,7 +116,7 @@
     "\n",
     "track_variables= [\"N_v\", \"Ca_Astro\", \"mutual_information\", \"Ca_stored\", \"open_prob\", \"release_prob\", \"release_vector\", \"S\",]\n",
     "\"\"\" [\"u\", \"spike_rate\", \"spike_probability\", \"open_prob\", \"S\", \"release_rate\", \"release_vector\",\n",
-    " \"N_v\", \"release_prob\", \"ap_duration_count\", \"Ca_pre\", \"Ca_Astro\" ,\"Ca_stored\", \n",
+    " \"N_v\", \"release_prob\", \"release_prob_a_posteriori\", \"ap_duration_count\", \"Ca_pre\", \"Ca_Astro\" ,\"Ca_stored\", \n",
     " \"site_probabilities\", \"glu\", \"IP3\", \"h\", \"mutual_information\"]\"\"\"\n",
     "\n",
     "#results = my_neuron.simulate(track_variables, save=True, save_each=1)\n",
