--- a/main.ipynb
+++ b/main.ipynb
@@ -127,6 +127,8 @@
     }
    ],
    "source": [
+    "# Charts.1-2\n",
+    "\n",
     "importlib.reload(utils)\n",
     "# formato lambda=20 \"risultati/27_04/λ=20/valori/no_noise_lambda=20values\"\n",
     "# formato lambda=100 \"risultati/29_04/MI_vs_time_lambda=100/no_noisevalues\"\n",
@@ -185,6 +187,8 @@
     }
    ],
    "source": [
+    "# Chart 3\n",
+    "\n",
     "plt.rcParams[\"pdf.fonttype\"] = 42\n",
     "plt.rcParams[\"ps.fonttype\"] = 42\n",
     "setLambda = (20, 50, 100, 150, 200, 300, 400, 500)\n",
@@ -239,6 +243,8 @@
     }
    ],
    "source": [
+    "#Chart 4\n",
+    "\n",
     "#Lambda astro experiments\n",
     "\"\"\"importlib.reload(utils)\n",
     "setLambdaAstro = (0, 0.2, 0.5, 0.8, 1, 1.5)#(2, 5, 10, 27)\n",
